--- a/Ubiquitous2/packages.config
+++ b/Ubiquitous2/packages.config
@@ -4,4 +4,7 @@
   <package id="Fluent.Ribbon" version="2.0.2" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.0.0.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
+  <package id="WebSocket4Net" version="0.10" targetFramework="net45" />
+  <package id="WpfAnimatedGif" version="1.4.8" targetFramework="net45" />
 </packages>
