--- a/Ubiquitous2Plugin/Ubiquitous2Plugin.csproj
+++ b/Ubiquitous2Plugin/Ubiquitous2Plugin.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,6 +45,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Ubiquitous2\Model\IOBSPluginService.cs">
+      <Link>IOBSPluginService.cs</Link>
+    </Compile>
     <Compile Include="Ubiquitous2Factory.cs" />
     <Compile Include="Ubiquitous2Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
