--- a/Ubiquitous2Plugin/Ubiquitous2Plugin.csproj
+++ b/Ubiquitous2Plugin/Ubiquitous2Plugin.csproj
@@ -34,8 +34,11 @@
     <Reference Include="CLRHost.Interop">
       <HintPath>OBSCLR\CLRHost.Interop.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -45,6 +48,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Ubiquitous2\Model\ImageData.cs">
+      <Link>ImageData.cs</Link>
+    </Compile>
     <Compile Include="..\Ubiquitous2\Model\IOBSPluginService.cs">
       <Link>IOBSPluginService.cs</Link>
     </Compile>
