--- a/Ubiquitous2/packages.config
+++ b/Ubiquitous2/packages.config
@@ -1,10 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="Fluent.Ribbon" version="2.0.2" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.0.0.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
+  <package id="Sparrow.Chart.Wpf" version="13.1.0.118" targetFramework="net45" />
+  <package id="System.Data.SQLite" version="1.0.94.1" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.94.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.EF6" version="1.0.94.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.Linq" version="1.0.94.1" targetFramework="net45" />
   <package id="WebSocket4Net" version="0.10" targetFramework="net45" />
   <package id="WpfAnimatedGif" version="1.4.9" targetFramework="net45" />
 </packages>
